DFINYT-13 updating and cleaning code for cKE placeholder module

--- a/templates/cke_placeholder.library_item.html.twig
+++ b/templates/cke_placeholder.library_item.html.twig
@@ -11,7 +11,7 @@
         <div
           draggable="true"
           class="cke-placeholder-draggable"
-          ondragstart="ckePlaceholder.dragStart(event, '<?php print $cke_placeholder_tag; ?>')"
+          ondragstart="ckePlaceholder.dragStart(event, '{{ cke_placeholder_tag }}')"
           {% for  value in item.data %}
             data-{{ value.key }}={{ value.key }}
 
