--- a/templates/cke_placeholder.source_pane.html.twig
+++ b/templates/cke_placeholder.source_pane.html.twig
@@ -16,7 +16,7 @@
     <div class="cke-placeholder-image-wrap">
       <img src="{{ item.preview }}" draggable="false"/>
     </div>
-    <h6> {{ item.title:truncate(40) }}</h6>
+    <h6> {{ item.title }}</h6>
     <button class="btn btn-success cke-placeholder-edit" data-target="/file/{{ item.id }}/edit?destination=cke-placeholder/update-done/{{ item.id }}">
       {{ 'Edit'|t }}
     </button>
