--- a/assets/cke_placeholder_form.css
+++ b/assets/cke_placeholder_form.css
@@ -12,6 +12,7 @@
   width: 345px;
   border-radius: 3px 0 0 3px;
   z-index: 1002;
+    box-shadow: -2px 2px 10px;
 }
 
 .cke-placeholder-library-form-wrap.open {
