--- a/assets/cke_placeholder_form.css
+++ b/assets/cke_placeholder_form.css
@@ -1,6 +1,7 @@
 .cke-placeholder-library-form-wrap {
   position: fixed;
   right: -346px;
+    right: 0;
   transition: right .3s;
   -webkit-transition: right .3s;
   -moz-transition: right .3s;
@@ -12,7 +13,7 @@
   width: 345px;
   border-radius: 3px 0 0 3px;
   z-index: 1002;
-    box-shadow: -2px 2px 10px;
+    box-shadow: -2px 2px 5px;
 }
 
 .cke-placeholder-library-form-wrap.open {
