--- a/assets/cke_placeholder_form.css
+++ b/assets/cke_placeholder_form.css
@@ -1,7 +1,6 @@
 .cke-placeholder-library-form-wrap {
   position: fixed;
   right: -346px;
-    right: 0;
   transition: right .3s;
   -webkit-transition: right .3s;
   -moz-transition: right .3s;
@@ -20,6 +19,13 @@
   box-shadow: -2px 2px 10px rgba(0,0,0,0.2);
   right: 0;
   min-height: 400px;
+}
+
+.cke-placeholder-library-tabs {
+  position: absolute;
+  left: -75px;
+  top: 10px;
+  width: 75px;
 }
 
 .cke-placeholder-fieldset-wrapper {
@@ -99,10 +105,6 @@
 }
 
 .cke-placeholder-tab {
-  width: 75px;
-  position: absolute;
-  left: -74px;
-  top: 10px;
   background: #eee;
   border: 1px solid #bbb;
   border-right: none;
@@ -118,6 +120,7 @@
   color: #0074be;
   font-weight: bold;
   border-radius: 3px 0 0 3px;
+  position: relative;
 }
 
 .cke-placeholder-tab:hover {
