Streamlined tag plugin.

--- a/modules/ckep_file_entity/templates/ckep_file_entity.inline_image.html.twig
+++ b/modules/ckep_file_entity/templates/ckep_file_entity.inline_image.html.twig
@@ -5,14 +5,14 @@
  */
 #}
 <p>
-    <span class="body-text__picture {{ alignment_class }}">
-        <span class="picture">
-            {{ picture_tag }}
-        </span>
-        {% if caption not empty %}
-            <span class="body-text__picture__caption">
-                {{ caption }}
-            </span>
-        {% endif%}
-    </span>
+  <span class="body-text__picture {{ alignment_class }}">
+      <span class="picture">
+          {{ picture_tag }}
+      </span>
+      {% if caption is not empty %}
+          <span class="body-text__picture__caption">
+              {{ caption }}
+          </span>
+      {% endif%}
+  </span>
 </p>
