--- a/templates/cke_placeholder.library_item.html.twig
+++ b/templates/cke_placeholder.library_item.html.twig
@@ -4,22 +4,13 @@
  * Library item template, used on node form.
  */
 #}
-{% if no_wrapper is not empty %}
-<div id="{{ wrapper_id}}" class="cke-placeholder-list {{ cke_placeholder_tag }} {{ cke_placeholder_tag }}-wrap">
-{% endif %}
-    {% for item in items %}
-        <div
-          draggable="true"
-          class="cke-placeholder-draggable"
-          ondragstart="ckePlaceholder.dragStart(event, '{{ cke_placeholder_tag }}')"
-          {% for key, value in item.data %}
-            data-{{ key }}="{{ value }}"
-
-          {% endfor %}
-          >
-          {{ item.markup }}
-        </div>
-    {% endfor %}
-{% if no_wrapper is not empty %}
+<div
+  draggable="true"
+  class="cke-placeholder-draggable"
+  ondragstart="ckePlaceholder.dragStart(event, '{{ cke_placeholder_tag }}')"
+  {% for key, value in data %}
+    data-{{ key }}="{{ value }}"
+  {% endfor %}
+  >
+  {{ markup }}
 </div>
-{% endif %}
